[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
rand = "0.8.5"
rsa = "0.9.6"
wasm-bindgen = "0.2.92"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies.web-sys]
version = "0.3.4"
features = [
"Document",
"Element",
"HtmlElement",
"Node",
"Window",
]

[dependencies.getrandom]
version="0.2.15"
features = ["js"]
